# space-adrift

./: .gitignore  CMakeLists.txt  SOURCES.md  commits
src/: main.cpp
src/objects/: button.cpp  button.hpp  food.cpp  fuel.cpp  label.cpp  label.hpp  meteor.cpp  meteor.hpp  player.cpp  player.hpp  projectile.cpp  projectile.hpp
src/scenes/: menu.cpp  menu.hpp  space.cpp  space.hpp
src/utils/: AnimatedSprite.cpp  AnimatedSprite.hpp  Camera.cpp  Camera.hpp  animated_sprite.cpp  animated_sprite.hpp  projectile_manager.cpp  projectile_manager.hpp  quadtree.cpp  quadtree.hpp  quadtree_bak.hpp  random.hpp  sound_manager.cpp  sound_manager.hpp  texture_manager.cpp  texture_manager.hpp
